add HITL